--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Praveenkumar Venkatesan </h1>
       <h3> (பிரவீன்குமார் வெங்கடேசன்)</h3>
-      <p>I am  <span class="typed" data-typed-items="Theortical Physicist"></span></p>
+      <p>I am  <span class="typed" data-typed-items="Theoritical Physicist"></span></p>
       <div class="social-links">
         
 	<!--a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
